--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,8 @@ node_modules/
 /playwright-report/
 /blob-report/
 /playwright/.cache/
+.DS_Store
+/test-results/
+/playwright-report/
+/blob-report/
+/playwright/.cache/
