--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/node": "^22.1.0"
   },
   "dependencies": {
-    "mysql2": "^3.11.3"
+    "mysql2": "^3.11.3",
+    "prettier": "^3.6.2"
   }
 }
