--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "devDependencies": {
     "@faker-js/faker": "^8.4.1",
     "@playwright/test": "^1.55.0",
-    "@types/node": "^22.1.0"
+    "@types/node": "^22.1.0",
+    "playwright-core": "^1.55.0"
   },
   "dependencies": {
     "mysql2": "^3.11.3",
