featA: dd logging with winston and integrate into login flow

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "mysql2": "^3.11.3",
-    "prettier": "^3.6.2"
+    "prettier": "^3.6.2",
+    "winston": "^3.18.3"
   }
 }
